5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1595_1017.log
== TEST (2019-03-31 14:24:19) 
-- CODE:
from math import math


t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import math
ImportError: cannot import name 'math'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:24:23) 
-- CODE:
from math import sin


t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:24:29) 
-- CODE:
from math import radian


t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import radian
ImportError: cannot import name 'radian'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:24:31) 
-- CODE:
from math import radians


t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import radian
ImportError: cannot import name 'radian'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:24:36) 
-- CODE:
from math import radians


t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import radian
ImportError: cannot import name 'radian'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:25:00) 
-- CODE:
from math import radians,sin,cos



t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import radian
ImportError: cannot import name 'radian'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:29:08) 
-- CODE:
from math import radians,sen,sin,cos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sen()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import radians,sen,sin,cos
ImportError: cannot import name 'sen'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:29:21) 
-- CODE:
from math import radians,sen,sin,cos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import radians,sen,sin,cos
ImportError: cannot import name 'sen'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:29:38) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    st1 = sin()
TypeError: sin() takes exactly one argument (0 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:30:14) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = (sin(t1)).(sin(t2))
print(st1)

-- ERROR:
File "XXXX", line 8
    st1 = (sin(t1)).(sin(t2))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:30:15) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = (sin(t1)).(sin(t2))
print(st1)

-- ERROR:
File "XXXX", line 8
    st1 = (sin(t1)).(sin(t2))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:30:29) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
print(st1)

-- OUTPUT:
-0.05296568648510429
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:32:42) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

-- OUTPUT:
-0.05296568648510429
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:37:46) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

acl = arccos((st1.st2)+(ct1.ct2.cg))

R = 6371.01

d =R*acl

print(round(d,6))
-- EXECUTION TIME:
0.181853
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1017/main.py", line 15, in <module>
    acl = arccos((st1.st2)+(ct1.ct2.cg))
NameError: name 'arccos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:37:48) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

acl = arccos((st1.st2)+(ct1.ct2.cg))

R = 6371.01

d =R*acl

print(round(d,6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    acl = arccos((st1.st2)+(ct1.ct2.cg))
NameError: name 'arccos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:38:42) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

acl = acos((st1.st2)+(ct1.ct2.cg))

R = 6371.01

d =R*acl

print(round(d,6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    acl = acos((st1.st2)+(ct1.ct2.cg))
AttributeError: 'float' object has no attribute 'st2'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:40:42) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

acl = float(acos((st1.st2)+(ct1.ct2.cg)))

R = 6371.01

d =R*acl

print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    acl = float(acos((st1.st2)+(ct1.ct2.cg)))
AttributeError: 'float' object has no attribute 'st2'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:47:38) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

acl = acos((st1.st2)+(ct1.ct2.cg))

R = 6371.01

d =R*acl

print(round(d,2))
-- EXECUTION TIME:
0.151735
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1017/main.py", line 15, in <module>
    acl = acos((st1.st2)+(ct1.ct2.cg))
AttributeError: 'float' object has no attribute 'st2'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:47:38) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

acl = acos((st1.st2)+(ct1.ct2.cg))

R = 6371.01

d =R*acl

print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    acl = acos((st1.st2)+(ct1.ct2.cg))
AttributeError: 'float' object has no attribute 'st2'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:48:07) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

print(st2)
-- OUTPUT:
-0.8664252431828691
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:50:03) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

acl = (st1.st2)
acl2 = (ct1.ct2.cg)
al = (acl + acl2)
acs = acos(al)

R = 6371.01


print(round(acs,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    acl = (st1.st2)
AttributeError: 'float' object has no attribute 'st2'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:50:38) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

acl = (st1.st2)
acl2 = (ct1.ct2.cg)
al = (acl + acl2)


R = 6371.01


print(round(acl,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    acl = (st1.st2)
AttributeError: 'float' object has no attribute 'st2'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:50:51) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

x = (st1.st2)
y = (ct1.ct2.cg)
z = (acl + acl2)


R = 6371.01


print(round(acl,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    x = (st1.st2)
AttributeError: 'float' object has no attribute 'st2'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:51:43) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(input("Latitude de P1: ")))
t2 = radians(input("Latitude de P2: ")))
g1 = radians(input("longitude de P1: ")))
g2 = radians(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

x = (st1.st2)
y = (ct1.ct2.cg)
z = (acl + acl2)


R = 6371.01


print(round(x,2))
-- ERROR:
File "XXXX", line 3
    t1 = radians(input()))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:51:50) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

x = (st1.st2)
y = (ct1.ct2.cg)
z = (acl + acl2)


R = 6371.01


print(round(acl,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    x = (st1.st2)
AttributeError: 'float' object has no attribute 'st2'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:55:24) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

acl = (st1.st2)
acl2 = (ct1.ct2.cg)
al = (acl + acl2)


R = 6371.01


print(round(acl,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    acl = (st1.st2)
AttributeError: 'float' object has no attribute 'st2'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:07:18) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

acl = (st1.st2)
acl2 = (ct1.ct2.cg)
al = (acl + acl2)


R = 6371.01


print(round(acl,2))
-- EXECUTION TIME:
0.151398
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1017/main.py", line 15, in <module>
    acl = (st1.st2)
AttributeError: 'float' object has no attribute 'st2'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:07:26) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

acl = (st1.st2)
acl2 = (ct1.ct2.cg)
al = (acl + acl2)


R = 6371.01


print(round(acl,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    acl = (st1.st2)
AttributeError: 'float' object has no attribute 'st2'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:07:44) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

acl = st1.st2
acl2 = ct1.ct2.cg
al = acl + acl2

R = 6371.01


print(round(acl,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    acl = st1.st2
AttributeError: 'float' object has no attribute 'st2'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:07:49) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

acl = st1.st2
acl2 = ct1.ct2.cg
al = acl + acl2

R = 6371.01


print(round(acl,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    acl = st1.st2
AttributeError: 'float' object has no attribute 'st2'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:07:57) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

acl = st1.1
acl2 = ct1.ct2.cg
al = acl + acl2

R = 6371.01


print(round(acl,2))
-- ERROR:
File "XXXX", line 15
    acl = st1.1
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:09:09) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

acl = (st1*st2)
acl2 = (ct1*ct2*cg)
al = (acl + acl2)


R = 6371.01
d = R*al

print(round(d,2))
-- OUTPUT:
2045.38
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:10:22) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

acl = (st1*st2)
acl2 = (ct1*ct2*cg)
al = (acl + acl2)


R = 6371.01
d = R*al

print(round(d,2))
-- EXECUTION TIME:
0.139796
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
2045.38
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:10:24) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

acl = (st1*st2)
acl2 = (ct1*ct2*cg)
al = (acl + acl2)


R = 6371.01
d = R*al

print(round(d,2))
-- OUTPUT:
2045.38
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:10:55) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

acl = (st1*st2)
acl2 = (ct1*ct2*cg)
al = acos(acl + acl2)


R = 6371.01
d = R*al

print(round(d,2))
-- OUTPUT:
7925.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:10:57) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

acl = (st1*st2)
acl2 = (ct1*ct2*cg)
al = acos(acl + acl2)


R = 6371.01
d = R*al

print(round(d,2))
-- EXECUTION TIME:
0.281092
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
7925.3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:11:00) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

acl = (st1*st2)
acl2 = (ct1*ct2*cg)
al = acos(acl + acl2)


R = 6371.01
d = R*al

print(round(d,2))
-- OUTPUT:
7925.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:12:00) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

acl = (st1*st2)
acl2 = (ct1*ct2*cg)
al = acos(acl + acl2)


R = 6371.01
d = R*al

print(round(d,2))
-- EXECUTION TIME:
0.15497
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
7925.3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:13:08) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

R = 6371.01

al = R*(acos((st1*st2) + (ct1*ct2*cg)))

print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(round(d,2))
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:13:18) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

R = 6371.01

al = R*(acos((st1*st2) + (ct1*ct2*cg)))

print(round(al,2))
-- OUTPUT:
7925.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:13:19) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

R = 6371.01

al = R*(acos((st1*st2) + (ct1*ct2*cg)))

print(round(al,2))
-- EXECUTION TIME:
0.155328
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
7925.3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:13:20) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

R = 6371.01

al = R*(acos((st1*st2) + (ct1*ct2*cg)))

print(round(al,2))
-- EXECUTION TIME:
0.165681
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
7925.3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:29:15) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

R = 6371.01

al = R*(acos((st1*st2) + (ct1*ct2*cg))

print(round(al,2))
-- EXECUTION TIME:
0.294109
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 19
    print(round(al,2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:29:17) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

R = 6371.01

al = R*(acos((st1*st2) + (ct1*ct2*cg))

print(round(al,2))
-- EXECUTION TIME:
0.170555
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 19
    print(round(al,2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:29:18) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

R = 6371.01

al = R*(acos((st1*st2) + (ct1*ct2*cg))

print(round(al,2))
-- ERROR:
File "XXXX", line 19
    print(round(al,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:29:53) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

R = 6371.01

al = R*(acos((st1*st2) + (ct1*ct2*cg))

print(round(al,2))
-- ERROR:
File "XXXX", line 19
    print(round(al,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:29:59) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

R = 6371.01

al = R*(acos((st1*st2) + (ct1*ct2*cg))

print(al)
-- ERROR:
File "XXXX", line 19
    print(al)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:30:09) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

R = 6371.01

al = R*(acos((st1*st2) + (ct1*ct2*cg))

print("a")
-- ERROR:
File "XXXX", line 19
    print("a")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:30:10) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

R = 6371.01

al = R*(acos((st1*st2) + (ct1*ct2*cg))

print("a")
-- ERROR:
File "XXXX", line 19
    print("a")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:30:14) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

R = 6371.01

al = R*(acos((st1*st2) + (ct1*ct2*cg))

-- ERROR:
File "XXXX", line 18
    
                                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:30:37) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

R = 6371.01

al = R*(acos((st1*st2) + (ct1*ct2*cg)))

print(round(al,2))
-- OUTPUT:
7925.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:30:44) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

R = 6371.01

al = R*(acos((st1*st2) + (ct1*ct2*cg)))

print(round(al,2))
-- EXECUTION TIME:
0.172668
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
7925.3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:30:45) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

R = 6371.01

al = R*(acos((st1*st2) + (ct1*ct2*cg)))

print(round(al,2))
-- OUTPUT:
7925.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:15:51) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

R = 6371.01

al = R*(acos((st1*st2) + (ct1*ct2*cg)))
if al<1;
al*1000

print(round(al,2))
-- ERROR:
File "XXXX", line 18
    if al<1;
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:16:55) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

R = 6371.01

al = R*(acos((st1*st2) + (ct1*ct2*cg)))
af = al*1000

print(round(af,2))
-- EXECUTION TIME:
0.114711
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
7925302.81
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:16:56) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

R = 6371.01

al = R*(acos((st1*st2) + (ct1*ct2*cg)))
af = al*1000

print(round(af,2))
-- OUTPUT:
7925302.81
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:18:05) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

R = 6371.01

al = R*(acos((st1*st2) + (ct1*ct2*cg)))

print(round(al,2))
-- OUTPUT:
7925.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:18:12) 
-- CODE:
from math import radians,sin,cos,acos

t1 = radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g1 = radians(float(input("longitude de P1: ")))
g2 = radians(float(input("longitude de P2: ")))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

R = 6371.01

al = R*(acos((st1*st2) + (ct1*ct2*cg)))

print(round(al,2))
-- EXECUTION TIME:
0.18294
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
7925.3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:20:44) 
-- CODE:
from math import radians,sin,cos,acos

t1 = float(input("Latitude de P1: "))
t2 = float(input("Latitude de P2: "))
g1 = float(input("longitude de P1: "))
g2 = float(input("longitude de P2: "))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

R = 6371.01

af = R*(acos((st1*st2) + (ct1*ct2*cg)))
al = radians(af)

print(round(al,2))
-- OUTPUT:
51.48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:20:46) 
-- CODE:
from math import radians,sin,cos,acos

t1 = float(input("Latitude de P1: "))
t2 = float(input("Latitude de P2: "))
g1 = float(input("longitude de P1: "))
g2 = float(input("longitude de P2: "))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

R = 6371.01

af = R*(acos((st1*st2) + (ct1*ct2*cg)))
al = radians(af)

print(round(al,2))
-- EXECUTION TIME:
0.152238
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
51.48
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:20:48) 
-- CODE:
from math import radians,sin,cos,acos

t1 = float(input("Latitude de P1: "))
t2 = float(input("Latitude de P2: "))
g1 = float(input("longitude de P1: "))
g2 = float(input("longitude de P2: "))

st1 = sin(t1)
st2 = sin(t2)

ct1 = cos(t1)
ct2 = cos(t2)
cg = cos(g1-g2)

R = 6371.01

af = R*(acos((st1*st2) + (ct1*ct2*cg)))
al = radians(af)

print(round(al,2))
-- OUTPUT:
51.48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:33:45) 
-- CODE:
import math
t1 = math.radians(float(input("digite a latitude: ")))
t2 = math.radians(float(input("digite a latitude: ")))
g1 = math.radians(float(input("digite a longitude: ")))
g2 = math.radians(float(input("digite a longitude: ")))

r = 6371.01

sen_t1 = math.sin(t1)
sen_t2 = math.sin(t2)
cos_t1 = math.cos(t1)
cos_t2 = math.cos(t2)

sub_t1t2 = g1 - g2

cos_sub = math.cos(sub_t1t2)

distance = r * (mat.acos((sen_t1 * sen_t2) + (cos_t1 * cos_t2 * cos_sub)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    distance = r * (mat.acos((sen_t1 * sen_t2) + (cos_t1 * cos_t2 * cos_sub)))
NameError: name 'mat' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:33:50) 
-- CODE:
import math
t1 = math.radians(float(input("digite a latitude: ")))
t2 = math.radians(float(input("digite a latitude: ")))
g1 = math.radians(float(input("digite a longitude: ")))
g2 = math.radians(float(input("digite a longitude: ")))

r = 6371.01

sen_t1 = math.sin(t1)
sen_t2 = math.sin(t2)
cos_t1 = math.cos(t1)
cos_t2 = math.cos(t2)

sub_t1t2 = g1 - g2

cos_sub = math.cos(sub_t1t2)

distance = r * (mat.acos((sen_t1 * sen_t2) + (cos_t1 * cos_t2 * cos_sub)))
-- EXECUTION TIME:
0.102088
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1017/main.py", line 18, in <module>
    distance = r * (mat.acos((sen_t1 * sen_t2) + (cos_t1 * cos_t2 * cos_sub)))
NameError: name 'mat' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:34:33) 
-- CODE:
import math
t1 = math.radians(float(input("digite a latitude: ")))
t2 = math.radians(float(input("digite a latitude: ")))
g1 = math.radians(float(input("digite a longitude: ")))
g2 = math.radians(float(input("digite a longitude: ")))

r = 6371.01

sen_t1 = math.sin(t1)
sen_t2 = math.sin(t2)
cos_t1 = math.cos(t1)
cos_t2 = math.cos(t2)

sub_t1t2 = g1 - g2

cos_sub = math.cos(sub_t1t2)

distance = r * (mat.acos((sen_t1 * sen_t2) + (cos_t1 * cos_t2 * cos_sub)))

print(round(distance,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    distance = r * (mat.acos((sen_t1 * sen_t2) + (cos_t1 * cos_t2 * cos_sub)))
NameError: name 'mat' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:34:34) 
-- CODE:
import math
t1 = math.radians(float(input("digite a latitude: ")))
t2 = math.radians(float(input("digite a latitude: ")))
g1 = math.radians(float(input("digite a longitude: ")))
g2 = math.radians(float(input("digite a longitude: ")))

r = 6371.01

sen_t1 = math.sin(t1)
sen_t2 = math.sin(t2)
cos_t1 = math.cos(t1)
cos_t2 = math.cos(t2)

sub_t1t2 = g1 - g2

cos_sub = math.cos(sub_t1t2)

distance = r * (mat.acos((sen_t1 * sen_t2) + (cos_t1 * cos_t2 * cos_sub)))

print(round(distance,2))
-- EXECUTION TIME:
0.146654
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1017/main.py", line 18, in <module>
    distance = r * (mat.acos((sen_t1 * sen_t2) + (cos_t1 * cos_t2 * cos_sub)))
NameError: name 'mat' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:34:36) 
-- CODE:
import math
t1 = math.radians(float(input("digite a latitude: ")))
t2 = math.radians(float(input("digite a latitude: ")))
g1 = math.radians(float(input("digite a longitude: ")))
g2 = math.radians(float(input("digite a longitude: ")))

r = 6371.01

sen_t1 = math.sin(t1)
sen_t2 = math.sin(t2)
cos_t1 = math.cos(t1)
cos_t2 = math.cos(t2)

sub_t1t2 = g1 - g2

cos_sub = math.cos(sub_t1t2)

distance = r * (mat.acos((sen_t1 * sen_t2) + (cos_t1 * cos_t2 * cos_sub)))

print(round(distance,2))
-- EXECUTION TIME:
0.167668
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1017/main.py", line 18, in <module>
    distance = r * (mat.acos((sen_t1 * sen_t2) + (cos_t1 * cos_t2 * cos_sub)))
NameError: name 'mat' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:34:36) 
-- CODE:
import math
t1 = math.radians(float(input("digite a latitude: ")))
t2 = math.radians(float(input("digite a latitude: ")))
g1 = math.radians(float(input("digite a longitude: ")))
g2 = math.radians(float(input("digite a longitude: ")))

r = 6371.01

sen_t1 = math.sin(t1)
sen_t2 = math.sin(t2)
cos_t1 = math.cos(t1)
cos_t2 = math.cos(t2)

sub_t1t2 = g1 - g2

cos_sub = math.cos(sub_t1t2)

distance = r * (mat.acos((sen_t1 * sen_t2) + (cos_t1 * cos_t2 * cos_sub)))

print(round(distance,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    distance = r * (mat.acos((sen_t1 * sen_t2) + (cos_t1 * cos_t2 * cos_sub)))
NameError: name 'mat' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:35:55) 
-- CODE:
import math
t1 = math.radians(float(input("digite a latitude: ")))
t2 = math.radians(float(input("digite a latitude: ")))
g1 = math.radians(float(input("digite a longitude: ")))
g2 = math.radians(float(input("digite a longitude: ")))

r = 6371.01

sen_t1 = math.sin(t1)
sen_t2 = math.sin(t2)
cos_t1 = math.cos(t1)
cos_t2 = math.cos(t2)

sub_t1t2 = g1 - g2

cos_sub = math.cos(sub_t1t2)

distance = r * (mat.acos((sen_t1 * sen_t2) + (cos_t1 * cos_t2 * cos_sub)))

if distance<1:
	distance = distance * 1000
	distance = round(distance,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    distance = r * (mat.acos((sen_t1 * sen_t2) + (cos_t1 * cos_t2 * cos_sub)))
NameError: name 'mat' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:35:56) 
-- CODE:
import math
t1 = math.radians(float(input("digite a latitude: ")))
t2 = math.radians(float(input("digite a latitude: ")))
g1 = math.radians(float(input("digite a longitude: ")))
g2 = math.radians(float(input("digite a longitude: ")))

r = 6371.01

sen_t1 = math.sin(t1)
sen_t2 = math.sin(t2)
cos_t1 = math.cos(t1)
cos_t2 = math.cos(t2)

sub_t1t2 = g1 - g2

cos_sub = math.cos(sub_t1t2)

distance = r * (mat.acos((sen_t1 * sen_t2) + (cos_t1 * cos_t2 * cos_sub)))

if distance<1:
	distance = distance * 1000
	distance = round(distance,2)
-- EXECUTION TIME:
0.210703
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1017/main.py", line 18, in <module>
    distance = r * (mat.acos((sen_t1 * sen_t2) + (cos_t1 * cos_t2 * cos_sub)))
NameError: name 'mat' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:35:58) 
-- CODE:
import math
t1 = math.radians(float(input("digite a latitude: ")))
t2 = math.radians(float(input("digite a latitude: ")))
g1 = math.radians(float(input("digite a longitude: ")))
g2 = math.radians(float(input("digite a longitude: ")))

r = 6371.01

sen_t1 = math.sin(t1)
sen_t2 = math.sin(t2)
cos_t1 = math.cos(t1)
cos_t2 = math.cos(t2)

sub_t1t2 = g1 - g2

cos_sub = math.cos(sub_t1t2)

distance = r * (mat.acos((sen_t1 * sen_t2) + (cos_t1 * cos_t2 * cos_sub)))

if distance<1:
	distance = distance * 1000
	distance = round(distance,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    distance = r * (mat.acos((sen_t1 * sen_t2) + (cos_t1 * cos_t2 * cos_sub)))
NameError: name 'mat' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:38:31) 
-- CODE:
import math
t1 = math.radians(float(input("digite a latitude: ")))
t2 = math.radians(float(input("digite a latitude: ")))
g1 = math.radians(float(input("digite a longitude: ")))
g2 = math.radians(float(input("digite a longitude: ")))

r = 6371.01

sen_t1 = math.sin(t1)
sen_t2 = math.sin(t2)
cos_t1 = math.cos(t1)
cos_t2 = math.cos(t2)

sub_t1t2 = g1 - g2

cos_sub = math.cos(sub_t1t2)

distance = r * (mat.acos((sen_t1 * sen_t2) + (cos_t1 * cos_t2 * cos_sub)))

if distance<1:
	distance = distance * 1000
	distance = round(distance,2)
	print(str(distance) + "m")
else:
	distance = round(distance,2)
	print = (str(distance) + "km" )
-- EXECUTION TIME:
0.156941
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1017/main.py", line 18, in <module>
    distance = r * (mat.acos((sen_t1 * sen_t2) + (cos_t1 * cos_t2 * cos_sub)))
NameError: name 'mat' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:38:32) 
-- CODE:
import math
t1 = math.radians(float(input("digite a latitude: ")))
t2 = math.radians(float(input("digite a latitude: ")))
g1 = math.radians(float(input("digite a longitude: ")))
g2 = math.radians(float(input("digite a longitude: ")))

r = 6371.01

sen_t1 = math.sin(t1)
sen_t2 = math.sin(t2)
cos_t1 = math.cos(t1)
cos_t2 = math.cos(t2)

sub_t1t2 = g1 - g2

cos_sub = math.cos(sub_t1t2)

distance = r * (mat.acos((sen_t1 * sen_t2) + (cos_t1 * cos_t2 * cos_sub)))

if distance<1:
	distance = distance * 1000
	distance = round(distance,2)
	print(str(distance) + "m")
else:
	distance = round(distance,2)
	print = (str(distance) + "km" )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    distance = r * (mat.acos((sen_t1 * sen_t2) + (cos_t1 * cos_t2 * cos_sub)))
NameError: name 'mat' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:38:43) 
-- CODE:
import math
t1 = math.radians(float(input("digite a latitude: ")))
t2 = math.radians(float(input("digite a latitude: ")))
g1 = math.radians(float(input("digite a longitude: ")))
g2 = math.radians(float(input("digite a longitude: ")))

r = 6371.01

sen_t1 = math.sin(t1)
sen_t2 = math.sin(t2)
cos_t1 = math.cos(t1)
cos_t2 = math.cos(t2)

sub_t1t2 = g1 - g2

cos_sub = math.cos(sub_t1t2)

distance = r * (math.acos((sen_t1 * sen_t2) + (cos_t1 * cos_t2 * cos_sub)))

if distance<1:
	distance = distance * 1000
	distance = round(distance,2)
	print(str(distance) + "m")
else:
	distance = round(distance,2)
	print = (str(distance) + "km" )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    distance = r * (mat.acos((sen_t1 * sen_t2) + (cos_t1 * cos_t2 * cos_sub)))
NameError: name 'mat' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:38:47) 
-- CODE:
import math
t1 = math.radians(float(input("digite a latitude: ")))
t2 = math.radians(float(input("digite a latitude: ")))
g1 = math.radians(float(input("digite a longitude: ")))
g2 = math.radians(float(input("digite a longitude: ")))

r = 6371.01

sen_t1 = math.sin(t1)
sen_t2 = math.sin(t2)
cos_t1 = math.cos(t1)
cos_t2 = math.cos(t2)

sub_t1t2 = g1 - g2

cos_sub = math.cos(sub_t1t2)

distance = r * (math.acos((sen_t1 * sen_t2) + (cos_t1 * cos_t2 * cos_sub)))

if distance<1:
	distance = distance * 1000
	distance = round(distance,2)
	print(str(distance) + "m")
else:
	distance = round(distance,2)
	print = (str(distance) + "km" )
-- EXECUTION TIME:
0.254145
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:38:47) 
-- CODE:
import math
t1 = math.radians(float(input("digite a latitude: ")))
t2 = math.radians(float(input("digite a latitude: ")))
g1 = math.radians(float(input("digite a longitude: ")))
g2 = math.radians(float(input("digite a longitude: ")))

r = 6371.01

sen_t1 = math.sin(t1)
sen_t2 = math.sin(t2)
cos_t1 = math.cos(t1)
cos_t2 = math.cos(t2)

sub_t1t2 = g1 - g2

cos_sub = math.cos(sub_t1t2)

distance = r * (math.acos((sen_t1 * sen_t2) + (cos_t1 * cos_t2 * cos_sub)))

if distance<1:
	distance = distance * 1000
	distance = round(distance,2)
	print(str(distance) + "m")
else:
	distance = round(distance,2)
	print = (str(distance) + "km" )
-- EXECUTION TIME:
0.123137
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:45:20) 
-- CODE:
import math
t1 = math.radians(float(input("digite a latitude: ")))
t2 = math.radians(float(input("digite a latitude: ")))
g1 = math.radians(float(input("digite a longitude: ")))
g2 = math.radians(float(input("digite a longitude: ")))

R = 6371.01

sen_t1 = math.sin(t1)
sen_t2 = math.sin(t2)
cos_t1 = math.cos(t1)
cos_t2 = math.cos(t2)

sub_t1t2 = g1 - g2

cos_sub = math.cos(sub_t1t2)

distance = R * (mat.acos((sen_t1 * sen_t2) + cos_t1 * cos_t2 * cos_sub))
print(round(d,2)
-- ERROR:
File "XXXX", line 20
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:45:21) 
-- CODE:
import math
t1 = math.radians(float(input("digite a latitude: ")))
t2 = math.radians(float(input("digite a latitude: ")))
g1 = math.radians(float(input("digite a longitude: ")))
g2 = math.radians(float(input("digite a longitude: ")))

R = 6371.01

sen_t1 = math.sin(t1)
sen_t2 = math.sin(t2)
cos_t1 = math.cos(t1)
cos_t2 = math.cos(t2)

sub_t1t2 = g1 - g2

cos_sub = math.cos(sub_t1t2)

distance = R * (mat.acos((sen_t1 * sen_t2) + cos_t1 * cos_t2 * cos_sub))
print(round(d,2)
-- EXECUTION TIME:
0.196685
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 20
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:45:27) 
-- CODE:
import math
t1 = math.radians(float(input("digite a latitude: ")))
t2 = math.radians(float(input("digite a latitude: ")))
g1 = math.radians(float(input("digite a longitude: ")))
g2 = math.radians(float(input("digite a longitude: ")))

R = 6371.01

sen_t1 = math.sin(t1)
sen_t2 = math.sin(t2)
cos_t1 = math.cos(t1)
cos_t2 = math.cos(t2)

sub_t1t2 = g1 - g2

cos_sub = math.cos(sub_t1t2)

d = R * (mat.acos((sen_t1 * sen_t2) + cos_t1 * cos_t2 * cos_sub))
print(round(d,2)
-- EXECUTION TIME:
0.146919
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 20
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:45:28) 
-- CODE:
import math
t1 = math.radians(float(input("digite a latitude: ")))
t2 = math.radians(float(input("digite a latitude: ")))
g1 = math.radians(float(input("digite a longitude: ")))
g2 = math.radians(float(input("digite a longitude: ")))

R = 6371.01

sen_t1 = math.sin(t1)
sen_t2 = math.sin(t2)
cos_t1 = math.cos(t1)
cos_t2 = math.cos(t2)

sub_t1t2 = g1 - g2

cos_sub = math.cos(sub_t1t2)

d = R * (mat.acos((sen_t1 * sen_t2) + cos_t1 * cos_t2 * cos_sub))
print(round(d,2)
-- EXECUTION TIME:
0.112221
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 20
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:45:28) 
-- CODE:
import math
t1 = math.radians(float(input("digite a latitude: ")))
t2 = math.radians(float(input("digite a latitude: ")))
g1 = math.radians(float(input("digite a longitude: ")))
g2 = math.radians(float(input("digite a longitude: ")))

R = 6371.01

sen_t1 = math.sin(t1)
sen_t2 = math.sin(t2)
cos_t1 = math.cos(t1)
cos_t2 = math.cos(t2)

sub_t1t2 = g1 - g2

cos_sub = math.cos(sub_t1t2)

d = R * (mat.acos((sen_t1 * sen_t2) + cos_t1 * cos_t2 * cos_sub))
print(round(d,2)
-- ERROR:
File "XXXX", line 20
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:45:31) 
-- CODE:
import math
t1 = math.radians(float(input("digite a latitude: ")))
t2 = math.radians(float(input("digite a latitude: ")))
g1 = math.radians(float(input("digite a longitude: ")))
g2 = math.radians(float(input("digite a longitude: ")))

R = 6371.01

sen_t1 = math.sin(t1)
sen_t2 = math.sin(t2)
cos_t1 = math.cos(t1)
cos_t2 = math.cos(t2)

sub_t1t2 = g1 - g2

cos_sub = math.cos(sub_t1t2)

d = R * (mat.acos((sen_t1 * sen_t2) + cos_t1 * cos_t2 * cos_sub))
print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    d = R * (mat.acos((sen_t1 * sen_t2) + cos_t1 * cos_t2 * cos_sub))
NameError: name 'mat' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:45:32) 
-- CODE:
import math
t1 = math.radians(float(input("digite a latitude: ")))
t2 = math.radians(float(input("digite a latitude: ")))
g1 = math.radians(float(input("digite a longitude: ")))
g2 = math.radians(float(input("digite a longitude: ")))

R = 6371.01

sen_t1 = math.sin(t1)
sen_t2 = math.sin(t2)
cos_t1 = math.cos(t1)
cos_t2 = math.cos(t2)

sub_t1t2 = g1 - g2

cos_sub = math.cos(sub_t1t2)

d = R * (mat.acos((sen_t1 * sen_t2) + cos_t1 * cos_t2 * cos_sub))
print(round(d,2))
-- EXECUTION TIME:
0.18879
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1017/main.py", line 18, in <module>
    d = R * (mat.acos((sen_t1 * sen_t2) + cos_t1 * cos_t2 * cos_sub))
NameError: name 'mat' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:47:51) 
-- CODE:
from math import *
t1 = math.radians(float(input("digite a latitude: ")))
t2 = math.radians(float(input("digite a latitude: ")))
g1 = math.radians(float(input("digite a longitude: ")))
g2 = math.radians(float(input("digite a longitude: ")))

R = 6371.01

sen_t1 = math.sin(t1)
sen_t2 = math.sin(t2)
cos_t1 = math.cos(t1)
cos_t2 = math.cos(t2)

sub_t1t2 = g1 - g2

cos_sub = math.cos(sub_t1t2)

d = R * (mat.acos((sen_t1 * sen_t2) + cos_t1 * cos_t2 * cos_sub))

print(round(d,2))
-- EXECUTION TIME:
0.104872
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1017/main.py", line 2, in <module>
    t1 = math.radians(float(input()))
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:47:52) 
-- CODE:
from math import *
t1 = math.radians(float(input("digite a latitude: ")))
t2 = math.radians(float(input("digite a latitude: ")))
g1 = math.radians(float(input("digite a longitude: ")))
g2 = math.radians(float(input("digite a longitude: ")))

R = 6371.01

sen_t1 = math.sin(t1)
sen_t2 = math.sin(t2)
cos_t1 = math.cos(t1)
cos_t2 = math.cos(t2)

sub_t1t2 = g1 - g2

cos_sub = math.cos(sub_t1t2)

d = R * (mat.acos((sen_t1 * sen_t2) + cos_t1 * cos_t2 * cos_sub))

print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    t1 = math.radians(float(input()))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:48:44) 
-- CODE:
import math
t1 = math.radians(float(input("digite a latitude: ")))
t2 = math.radians(float(input("digite a latitude: ")))
g1 = math.radians(float(input("digite a longitude: ")))
g2 = math.radians(float(input("digite a longitude: ")))

R = 6371.01

sen_t1 = math.sin(t1)
sen_t2 = math.sin(t2)
cos_t1 = math.cos(t1)
cos_t2 = math.cos(t2)

sub_t1t2 = g1 - g2

cos_sub = math.cos(sub_t1t2)

d = R * (math.acos((sen_t1 * sen_t2) + cos_t1 * cos_t2 * cos_sub))

print(round(d,2))
-- EXECUTION TIME:
0.128372
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
7925.3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:49:08) 
-- CODE:
import math
t1 = radians(float(input("digite a latitude: ")))
t2 = radians(float(input("digite a latitude: ")))
g1 = radians(float(input("digite a longitude: ")))
g2 = radians(float(input("digite a longitude: ")))

R = 6371.01

sen_t1 = sin(t1)
sen_t2 = sin(t2)
cos_t1 = cos(t1)
cos_t2 = cos(t2)

sub_t1t2 = g1 - g2

cos_sub = math.cos(sub_t1t2)

d = R * (acos((sen_t1 * sen_t2) + cos_t1 * cos_t2 * cos_sub))

print(round(d,2))
-- EXECUTION TIME:
0.134419
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1017/main.py", line 2, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:49:09) 
-- CODE:
import math
t1 = radians(float(input("digite a latitude: ")))
t2 = radians(float(input("digite a latitude: ")))
g1 = radians(float(input("digite a longitude: ")))
g2 = radians(float(input("digite a longitude: ")))

R = 6371.01

sen_t1 = sin(t1)
sen_t2 = sin(t2)
cos_t1 = cos(t1)
cos_t2 = cos(t2)

sub_t1t2 = g1 - g2

cos_sub = math.cos(sub_t1t2)

d = R * (acos((sen_t1 * sen_t2) + cos_t1 * cos_t2 * cos_sub))

print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:49:17) 
-- CODE:
from math import *
t1 = radians(float(input("digite a latitude: ")))
t2 = radians(float(input("digite a latitude: ")))
g1 = radians(float(input("digite a longitude: ")))
g2 = radians(float(input("digite a longitude: ")))

R = 6371.01

sen_t1 = sin(t1)
sen_t2 = sin(t2)
cos_t1 = cos(t1)
cos_t2 = cos(t2)

sub_t1t2 = g1 - g2

cos_sub = math.cos(sub_t1t2)

d = R * (acos((sen_t1 * sen_t2) + cos_t1 * cos_t2 * cos_sub))

print(round(d,2))
-- EXECUTION TIME:
0.234486
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1017/main.py", line 16, in <module>
    cos_sub = math.cos(sub_t1t2)
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:49:18) 
-- CODE:
from math import *
t1 = radians(float(input("digite a latitude: ")))
t2 = radians(float(input("digite a latitude: ")))
g1 = radians(float(input("digite a longitude: ")))
g2 = radians(float(input("digite a longitude: ")))

R = 6371.01

sen_t1 = sin(t1)
sen_t2 = sin(t2)
cos_t1 = cos(t1)
cos_t2 = cos(t2)

sub_t1t2 = g1 - g2

cos_sub = math.cos(sub_t1t2)

d = R * (acos((sen_t1 * sen_t2) + cos_t1 * cos_t2 * cos_sub))

print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    cos_sub = math.cos(sub_t1t2)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:49:40) 
-- CODE:
from math import *
t1 = radians(float(input("digite a latitude: ")))
t2 = radians(float(input("digite a latitude: ")))
g1 = radians(float(input("digite a longitude: ")))
g2 = radians(float(input("digite a longitude: ")))

R = 6371.01

sen_t1 = sin(t1)
sen_t2 = sin(t2)
cos_t1 = cos(t1)
cos_t2 = cos(t2)

sub_t1t2 = g1 - g2

cos_sub = math.cos(sub_t1t2)

d = R * (acos((sen_t1 * sen_t2) + cos_t1 * cos_t2 * cos_sub))

print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    cos_sub = math.cos(sub_t1t2)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:49:47) 
-- CODE:
from math import *
t1 = radians(float(input("digite a latitude: ")))
t2 = radians(float(input("digite a latitude: ")))
g1 = radians(float(input("digite a longitude: ")))
g2 = radians(float(input("digite a longitude: ")))

R = 6371.01

sen_t1 = sin(t1)
sen_t2 = sin(t2)
cos_t1 = cos(t1)
cos_t2 = cos(t2)

sub_t1t2 = g1 - g2

cos_sub = cos(sub_t1t2)

d = R * (acos((sen_t1 * sen_t2) + cos_t1 * cos_t2 * cos_sub))

print(round(d,2))
-- OUTPUT:
7925.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:49:48) 
-- CODE:
from math import *
t1 = radians(float(input("digite a latitude: ")))
t2 = radians(float(input("digite a latitude: ")))
g1 = radians(float(input("digite a longitude: ")))
g2 = radians(float(input("digite a longitude: ")))

R = 6371.01

sen_t1 = sin(t1)
sen_t2 = sin(t2)
cos_t1 = cos(t1)
cos_t2 = cos(t2)

sub_t1t2 = g1 - g2

cos_sub = cos(sub_t1t2)

d = R * (acos((sen_t1 * sen_t2) + cos_t1 * cos_t2 * cos_sub))

print(round(d,2))
-- EXECUTION TIME:
0.152274
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
7925.3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:49:50) 
-- CODE:
from math import *
t1 = radians(float(input("digite a latitude: ")))
t2 = radians(float(input("digite a latitude: ")))
g1 = radians(float(input("digite a longitude: ")))
g2 = radians(float(input("digite a longitude: ")))

R = 6371.01

sen_t1 = sin(t1)
sen_t2 = sin(t2)
cos_t1 = cos(t1)
cos_t2 = cos(t2)

sub_t1t2 = g1 - g2

cos_sub = cos(sub_t1t2)

d = R * (acos((sen_t1 * sen_t2) + cos_t1 * cos_t2 * cos_sub))

print(round(d,2))
-- OUTPUT:
7925.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:49:53) 
-- CODE:
from math import *
t1 = radians(float(input("digite a latitude: ")))
t2 = radians(float(input("digite a latitude: ")))
g1 = radians(float(input("digite a longitude: ")))
g2 = radians(float(input("digite a longitude: ")))

R = 6371.01

sen_t1 = sin(t1)
sen_t2 = sin(t2)
cos_t1 = cos(t1)
cos_t2 = cos(t2)

sub_t1t2 = g1 - g2

cos_sub = cos(sub_t1t2)

d = R * (acos((sen_t1 * sen_t2) + cos_t1 * cos_t2 * cos_sub))

print(round(d,2))
-- EXECUTION TIME:
0.148214
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
7925.3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:54:16) 
-- CODE:
from math import *
t1 = radians(float(input("digite a latitude: ")))
g1 = radians(float(input("digite a longitude: ")))
t2 = radians(float(input("digite a latitude: ")))
g2 = radians(float(input("digite a longitude: ")))

R = 6371.01

sen_t1 = sin(t1)
sen_t2 = sin(t2)
cos_t1 = cos(t1)
cos_t2 = cos(t2)

sub_t1t2 = g1 - g2

cos_sub = cos(sub_t1t2)

d = R * (acos((sen_t1 * sen_t2) + cos_t1 * cos_t2 * cos_sub))

print(round(d,2))
-- EXECUTION TIME:
0.191586
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
